--- a/css/source/style.scss
+++ b/css/source/style.scss
@@ -35,8 +35,27 @@ table {
   }
 }
 
+.seventh {
+  width: 70%;
+}
+
+.third {
+  width: 30%;
+}
+
+.sixth {
+  width: 60%;
+}
+
+.fourth {
+  width: 40%;
+}
+
 .half {
   width: 50%;
+}
+
+.half, .sixth, .fourth, .seventh, .third {
   &.left {
     float: left;
   }
